# signature2svg

./: LICENSE  README.md  pyproject.toml
docs/: github-release.md
docs/superpowers/plans/: 2026-04-07-signature-vectorization.md  2026-04-08-image2svg.md
docs/superpowers/specs/: 2026-04-07-signature-vectorization-design.md  2026-04-08-image2svg-design.md
scripts/: release.sh
src/signature2svg/: __init__.py  __main__.py  clean.py  cli.py  config.py  exceptions.py  optimize.py  parametrize.py  preprocess.py  vectorize.py
tests/: conftest.py  test_clean.py  test_cli.py  test_config.py  test_optimize.py  test_parametrize.py  test_preprocess.py  test_vectorize.py
