[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/signature2svg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/signature2svg"]

[project]
name = "signature2svg"
dynamic = ["version"]
description = "Convert signature photos to clean, color-parametrizable SVGs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "jcmx9", email = "jcmx9@tutamail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Typing :: Typed",
]
dependencies = [
    "opencv-python>=4.10",
    "numpy>=2.0",
    "lxml>=5.0",
    "typer>=0.15",
    "pydantic>=2.0",
    "scour>=0.38",
]

[project.scripts]
signature2svg = "signature2svg.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "lxml-stubs>=0.5",
    "bump-my-version>=1.1",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["scour.*", "cv2.*"]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "26.4.4"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "release: v{new_version}"
message = "release: v{new_version}"
parse = '(?P<release>\d+\.\d+)\.(?P<patch>\d+)(\.dev(?P<dev>\d+))?'
serialize = [
    "{release}.{patch}.dev{dev}",
    "{release}.{patch}",
]

[tool.bumpversion.parts.release]
calver_format = "{YY}.{MM}"

[tool.bumpversion.parts.patch]
first_value = "0"

[tool.bumpversion.parts.dev]
first_value = "1"

[[tool.bumpversion.files]]
filename = "src/signature2svg/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pytest.ini_options]
markers = [
    "requires_potrace: test requires potrace binary installed",
]
